<resources>
    <string name="app_name" translatable="false">Casual Learn</string>
    <string name="emailCasualLearn" translatable="false">casuallearnapp@gsic.uva.es</string>
    <string name="fileProvider" translatable="false">es.uva.gsic.adolfinstro.fileprovider</string>
    <string name="permi">Permissions</string>
    <string name="permiM">The app needs all permissions!</string>
    <string name="accept">OK</string>
    <string name="exi">Exit</string>
    <string name="title_activity_task_camera">task_camera</string>
    <string name="task">Task</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="latitud">Latitude</string>
    <string name="longitud">Longitude</string>
    <string name="hintRespuesta">Your answer…</string>
    <string name="by">About the app…</string>
    <string name="settings">Settings</string>
    <string name="imagenG">Image saved</string>
    <string name="videoG">Video saved</string>
    <string name="imagenesG">Images saved</string>
    <string name="imagenGN">Image saved. Take the next photo</string>
    <string name="errorOpera">Operation error</string>
    <string name="gsic">GSIC/EMIC</string>
    <string name="respuestaVacia">The answer is empty!!</string>
    <string name="respuestaG">Saved answer</string>
    <string name="noMolestar">Don\'t Disturb with notifications of places</string>
    <string name="intervalo">Interval between tasks</string>
    <string name="intervaloResumen">Minimum interval between each task</string>
    <string name="textoNotificacionPersistente">Looking for new tasks..</string>
    <string name="Usuario">User</string>
    <string name="Password">Password</string>
    <string name="acceso">Sign in</string>
    <string name="title_activity_ask_camera">ask_camera</string>
    <string name="canalTareas">Tasks channel</string>
    <string name="canalPersistente">Persistent channel</string>
    <string name="pregunta">Ask</string>
    <string name="camara">Camera</string>
    <string name="mapa">Map</string>
    <string name="openstreetmap_contributors">© OpenStreetMap contributors</string>
    <string name="desactivaNoMolestar">Turn off <b>don\'t disturb</b> for use the map</string>
    <string name="registro">Sign up</string>
    <string name="emptyLoginUser">Empty username</string>
    <string name="emptyLoginPass">Empty password</string>
    <string name="incorrectLogin">Incorrect username or password</string>
    <string name="recuperandoPosicion">Getting position…</string>
    <string name="exitT">Exit APP</string>
    <string name="exit">Are you sure?</string>
    <string name="tituloErrorMarca">Problems with </string>
    <string name="mensajeSolucionMarca">You need to add this app to the white list</string>
    <string name="tituloListaBlancaPref">Dialog alert for white list</string>
    <string name="descripcionListaBlancaPref">Show dialog alert in devices with problems with the process of location</string>
    <string name="imagenDescripcionTarea">Task description image</string>
    <string name="sinDescripcion">Task without description</string>
    <string name="recursoMaximaResolucion">It\'s already the maximum resolution</string>
    <string name="voy">I\'m going!</string>
    <string name="debug" translatable="false">DEBUG</string>
    <string name="score">Rate this task!</string>
    <string name="thanks">Thank you for rate this task!</string>
    <string name="ahoraNo">Put off</string>
    <string name="nuncaMas">Reject</string>
    <string name="ErrorBBDD">The task is not found in the database</string>
    <string name="tituErrorBBDD">Error in database</string>
    <string name="creditos">Credits</string>
    <string name="openStreetMap" translatable="false">OpenStreetMap</string>
    <string name="libraries">Libraries</string>
    <string name="Osmdroid" translatable="false">"osmdroid"</string>
    <string name="PhotoView" translatable="false">"PhotoView"</string>
    <string name="fused" translatable="false">"Fused Location Provider API"</string>
    <string name="respuestaEspeTitulo">Expected response</string>
    <string name="respuestaEspeCorrecta">Correct answer!</string>
    <string name="respuestaEspeIncrrecta">Wrong answer!</string>
    <string name="nuevasTareas">New tasks in</string>
    <string name="visista">You can visit</string>
    <string name="estas_cerca">You\'re near of</string>
    <string name="porque_no_acercas">Why don\'t you go to</string>
    <string name="enviar">Send</string>
    <string name="gracias">Thanks!!</string>
    <string name="realizar">Do</string>
    <string name="tipoDeTarea">Type of task:</string>
    <string name="infoTarea">Task info.</string>
    <string name="terminar">Finish task</string>
    <string name="denunciarPreguntaTitulo">Report task</string>
    <string name="denunciarPreguntaTexto">Could you explain why this task is wrong?</string>
    <string name="tareasPospuestas">Pending tasks</string>
    <string name="tareaPospuesta">Task put off</string>
    <string name="tareasRechazadas">Reject tasks</string>
    <string name="tareasCompletadas">Completed tasks</string>
    <string name="sinTareas">The list has not got any task.</string>
    <string name="restaurarTarea">Undo rejection</string>
    <string name="restaurarTareaTexto">Do you want this task to be able to come out again?</string>
    <string name="desarrolladoPor">An app developed by</string>
    <string name="intervaloDias">Days</string>
    <string name="intervaloHoras">Hours</string>
    <string name="intervaloMinutos">Minutes</string>
    <string name="tareasFindes">Tasks on weekends</string>
    <string name="sinRespuesta">Without answer</string>
    <string name="preguntaCorta">Short answer</string>
    <string name="preguntaLarga">Long answer</string>
    <string name="preguntaImagen">Ask and photo</string>
    <string name="imagen">Photo</string>
    <string name="imagenMultiple">Multiple photo</string>
    <string name="video">Video</string>
    <string name="acercate">You should be closer to the task</string>
    <string name="valorActual">Current value:</string>
    <string name="minuto">minute</string>
    <string name="minutos">minutes</string>
    <string name="hora">hour</string>
    <string name="horas">hours</string>
    <string name="dia">day</string>
    <string name="dias">days</string>
    <string name="pulsaMarker">"Click on a marker to see the types of tasks "</string>
    <string name="agrupacionPuntos">Group of interest points</string>
    <string name="tareaRegistrada">The task has been completed, reported, postponed or rejected</string>
    <string name="hola">"Hi "</string>
    <string name="errorAutentica">Authentication failure</string>
    <string name="datosUsuario">User data</string>
    <string name="textoOpcional">Optional text…</string>
    <string name="editar">Edit</string>
    <string name="publicar">Post</string>
    <string name="tareaRealizar">Complete the task</string>
    <string name="tareaCompletada">Complete task</string>
    <string name="navega">Navigate to the task</string>
    <string name="distanciaRecuperar">Get closer to unlock the task. Current distance between your position and the task:</string>
    <string name="agregarContenido">Add new file</string>
    <string name="agregaImagenAntesBorrar">Add a new photo before remove this</string>
    <string name="agregaVideoAntesBorrar">Add a new video before remove this</string>
    <string name="tareaIndividual">Single point tasks</string>
    <string name="pulsaEnUnaTarea">Click on a task of the list to get more info</string>
    <string name="proyectosSistema" translatable="false"><![CDATA[Desarrollo financiado por la Junta de Castilla y León y el Fondo Europeo de Desarrollo Regional a través del proyecto de investigación <a href=\'https://casuallearn.gsic.uva.es/\'>VA257P18</a> y por la Agencia Estatal de Investigación y el Fondo Europeo de Desarrollo Regional a través del proyecto <a href=\'https://smartlet.gsic.uva.es/\'>TIN2017-85179-C3-2-R</a>.]]></string>
    <string name="fondosInvesticacion">Research Projects</string>
    <string name="Desarrolladores">Developers</string>
    <string name="Picasso" translatable="false">Picasso</string>
    <string name="Volley" translatable="false">Volley</string>
    <string name="version">Version</string>
    <string name="acercade">"About Casual Learn"</string>
    <string name="imagenAmpliable">Expandable imagen</string>
    <string name="hashtag" translatable="false">casualLearn</string>
    <string name="instalaTwitter">You should install the official Twitter client to share your answer</string>
    <string name="palabraClave">Hashtag</string>
    <string name="descripcionPalabraClave">Customize the hashtag with which the tasks will be published on Twitter</string>
    <string name="fuentesInformacion" translatable="false">Fuentes de información</string>
    <string name="urlgsic" translatable="false">https://www.gsic.uva.es</string>
    <string name="urluva" translatable="false">https://www.uva.es/export/sites/uva/</string>
    <string name="urlBienesJunta" translatable="false">https://datosabiertos.jcyl.es/web/jcyl/set/es/cultura-ocio/bienes-inmuebles/1284872768044</string>
    <string name="urlMunicipiosJunta" translatable="false">http://datosabiertos.jcyl.es/web/jcyl/set/es/sector-publico/municipios/1284278782067</string>
    <string name="urlDbpedia" translatable="false">https://wiki.dbpedia.org/</string>
    <string name="urlWikidata" translatable="false">https://www.wikidata.org/wiki/Wikidata:Main_Page</string>
    <string name="urlopenStreetMap" translatable="false">https://www.openstreetmap.org/copyright</string>
    <string name="urlOsmdroid" translatable="false">https://github.com/osmdroid/osmdroid</string>
    <string name="urlPhotoView" translatable="false">https://github.com/chrisbanes/PhotoView</string>
    <string name="urlPicasso" translatable="false">https://square.github.io/picasso/</string>
    <string name="compartir">share</string>
    <string name="puntuaCompletada">You can edit the score of the task</string>
    <string name="tareaGuardada">Task successfully modified</string>
    <string name="preguntaImagenes">Ask and multiple photos</string>
    <string name="preguntaVideo">Ask and video</string>
    <string name="textoPuntua">The score given to the task will serve to offer you the types of task that you like.</string>
    <string name="reportarPregunta">Report error</string>
    <string name="noEntiendo">I don\'t understand the task</string>
    <string name="tareaConFallos">Misspelling task</string>
    <string name="noSePuedeRealizar">The task cannot be do</string>
    <string name="enviarCorreo">Send email</string>
    <string name="iniciarSesion">Log in</string>
    <string name="skip">Skip</string>
    <string name="compartir_instagram">Share on Instagram</string>
    <string name="compartir_yammer">Share on Yammer</string>
    <string name="compartir_twitter">Share on Twitter</string>
    <string name="ejecucion_segundo_plano">Running in the background</string>
    <string name="omitir">Skip</string>
    <string name="vamos">Go</string>
    <string name="texto_segundo_plano"><![CDATA[Casual Learn has to run in the background in order to notify nearby places. We have detected that your phone can block this feature. If you wish, we can help you to find the app that manages this things. You need to allow Casual Learn to <b>run in the background</b> and <b>start automatically</b> (so the app works again when you turn on your device).<br><br>If you don\'t make this changes, Casual Learn won\'t be able to notify new places. Even so, you can continue using the app normally.]]></string>
    <string name="compartir_casual_learn">Share Casual Learn</string>
    <string name="valora_la_app">Rate the app</string>
    <string name="lugares_notificados">Places notified</string>
</resources>