<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grupo_listas"
        android:checkableBehavior="none">
        <item android:id="@+id/menuTareasCompletadas"
            android:title="@string/tareasCompletadas"
            android:icon="@drawable/ic_check_completada"/>

        <item android:id="@+id/menuTareasPospuestas"
            android:title="@string/tareasPospuestas"
            android:icon="@drawable/ic_pospuesta"/>

        <item android:id="@+id/menuTareasRechazadas"
            android:title="@string/tareasRechazadas"
            android:icon="@drawable/ic_rechazadas"/>

        <item android:id="@+id/menuLugaresNotificados"
            android:title="@string/lugares_notificados"
            android:icon="@drawable/ic_location_city" />
    </group>

    <group android:id="@+id/grupo_acerca"
        android:checkableBehavior="none">
        <item
            android:id="@+id/ajustes"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
        <item android:id="@+id/comparte"
            android:title="@string/compartir_casual_learn"
            android:icon="@drawable/ic_share_white"/>
        <item android:id="@+id/valora"
            android:title="@string/valora_la_app"
            android:icon="@drawable/ic_baseline_star_24"/>
        <item android:id="@+id/acerca"
            android:title="@string/by"
            android:icon="@drawable/ic_info_black_24dp"/>
    </group>

    <group android:id="@+id/grupo_iniciaSesion"
        android:checkableBehavior="none">
        <item android:id="@+id/cerrarSesion"
            android:title="@string/iniciarSesion"
            android:icon="@drawable/login_happy"/>
    </group>
</menu>
