<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp">

    <TextView
        android:id="@+id/tituloReportar"
        android:text="@string/reportarPregunta"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorSecondary"
        android:textColor="@color/colorSecondaryText"
        android:padding="15dp"
        android:textSize="25sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ScrollView
        android:layout_marginVertical="20dp"
        android:id="@+id/svReportar"
        app:layout_constraintTop_toBottomOf="@id/tituloReportar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cbNoEntiendoTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/noEntiendo"/>

            <CheckBox
                android:id="@+id/cbTareaFallos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cbNoEntiendoTarea"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/tareaConFallos"/>

            <CheckBox
                android:id="@+id/cbNoPuedoRealizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cbTareaFallos"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/noSePuedeRealizar"/>

            <EditText
                android:layout_marginVertical="10dp"
                android:id="@+id/etDenuncia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="6"
                android:maxLines="6"
                android:hint="@string/textoOpcional"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/cbNoPuedoRealizar"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="top|start"
                android:inputType="textMultiLine" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <Button
        style="@style/botonPrimario"
        android:layout_marginVertical="10dp"
        android:id="@+id/btAceptarReportar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/svReportar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/enviarCorreo"/>
</androidx.constraintlayout.widget.ConstraintLayout>

