<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tvAcceso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/etUsuario"
            android:text="@string/acceso"
            android:textSize="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="90dp" />


        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/etContrase"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="30dp"
            android:hint="@string/Usuario"
            android:layout_marginVertical="25dp"
            android:layout_marginHorizontal="20dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/etContrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btLog"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="30dp"
            android:hint="@string/Password"
            android:layout_marginVertical="25dp"
            android:layout_marginHorizontal="20dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btLog"
            android:layout_width="150dp"
            android:layout_height="75dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="90dp"
            android:text="@string/next"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>