<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <TextView
        android:id="@+id/tvTituloSegundoPlano"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:padding="@dimen/margen_texto"
        android:textAlignment="center"
        android:text="@string/ejecucion_segundo_plano"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvTextoSegundoPlano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:padding="@dimen/margen_texto"
        app:layout_constraintTop_toBottomOf="@id/tvTituloSegundoPlano"
        android:textAlignment="center"
        android:text="@string/texto_segundo_plano"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btOmitirSegundoPlano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_rojo"
        android:text="@string/omitir"
        android:layout_margin="@dimen/margen_texto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextoSegundoPlano"
        app:layout_constraintEnd_toStartOf="@id/btVamosSegundoPlano"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        style="@style/botonPrimario"
        android:id="@+id/btVamosSegundoPlano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vamos"
        android:layout_margin="@dimen/margen_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btOmitirSegundoPlano"
        app:layout_constraintBottom_toBottomOf="@id/btOmitirSegundoPlano"
        app:layout_constraintStart_toEndOf="@id/btOmitirSegundoPlano"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
