<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompartirRespuesta">

    <TextView
        android:id="@+id/tvTextoCompartir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginVertical="40dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btCompartirInsta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTextoCompartir"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="15dp"
        android:drawableStart="@drawable/ic_instagram_color"
        android:text="@string/compartir_instagram"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="40dp"
        android:onClick="boton"/>

    <Button
        android:id="@+id/btCompartirYammer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btCompartirInsta"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="15dp"
        android:drawableStart="@drawable/ic_yammer"
        android:text="@string/compartir_yammer"
        android:layout_margin="20dp"
        android:onClick="boton"/>

    <Button
        android:id="@+id/btCompartirTwitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btCompartirYammer"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableStart="@drawable/ic_twitter_logo_color"
        android:text="@string/compartir_twitter"
        android:layout_margin="20dp"
        android:padding="15dp"
        android:onClick="boton"/>

    <Button
        style="@style/botonPrimario"
        android:id="@+id/btCompartirVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btCompartirTwitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/skip"
        android:layout_margin="20dp"
        android:onClick="boton"/>

</androidx.constraintlayout.widget.ConstraintLayout>