<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Puntuacion">

    <TextView
        android:id="@+id/tvPuntuaTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rbPuntuacion"
        android:text="@string/textoPuntua"
        android:textSize="22sp"
        android:paddingHorizontal="10dp"/>

    <RatingBar
        android:id="@+id/rbPuntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPuntuaTarea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btEnviarPuntuacion"
        android:numStars="5"
        android:rating="0"
        android:stepSize="1"
        android:theme="@style/barraPuntua" />

    <Button style="@style/botonPrimario"
        android:id="@+id/btEnviarPuntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btCompartirTwitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btCompartirTwitter"
        app:layout_constraintTop_toTopOf="@id/btCompartirTwitter"
        android:text="@string/cancel"
        android:onClick="boton" />

    <Button
        android:id="@+id/btCompartirTwitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btEnviarPuntuacion"
        app:layout_constraintBottom_toBottomOf="parent"
        android:drawableStart="@drawable/ic_twitter_logo_color"
        android:drawablePadding="2dp"
        android:layout_marginBottom="20dp"
        android:text="@string/compartir"
        android:onClick="boton" />

</androidx.constraintlayout.widget.ConstraintLayout>